--- a/style.css
+++ b/style.css
@@ -999,7 +999,17 @@ body {
     
     .hero-title {
         font-size: 2.5rem;
+        margin-top: 5rem;
     }
+
+    .hero-visual{
+        display: none;
+    }
+
+    .hero-scroll{
+        display: none;
+    }
+
     
     .project-item {
         margin-bottom: 3rem;
